apps/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: fronted-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tfg-plataforma.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service 
            port:
              number: 80
